refactoring pool name

--- a/TODO
+++ b/TODO
@@ -3,3 +3,6 @@
 [ ] user must be able to stop app from searching
 [ ] number of online users must never show 0, must show 1 if you're disconnected and 2 if you connected
 [ ] treat relay error handling like nostr_server maxevent error
+[ ] ensure that all emitted event has expiration timestamp
+[ ] include SEO like mempool SEO
+[ ] include response header indicanting onion domain
