centralizando serviço de lista de pubkeys que devem ser ignorados pelo algoritimo

--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 [X] block textarea while searching stranger
-[ ] check app behaviour after some talks and connections
+[X] include SEO like mempool SEO
 [ ] number of online users must never show 0, must show 1 if you're disconnected and 2 if you connected
 [ ] treat relay error handling like nostr_server maxevent error
 [ ] ensure that all emitted event has expiration timestamp
-[X] include SEO like mempool SEO
-[ ] include response header indicanting onion domain
+[ ] check app behaviour after some talks and connections
+[-] include response header indicanting onion domain
 [ ] deploy into onion domain
